--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src-correction/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Adrian735/Workshop-Firebase#readme",
   "dependencies": {
+    "blagues-api": "^2.1.0",
     "body-parser": "^1.20.1",
     "expres": "^0.0.5",
     "express": "^4.18.2",
